# shape-meet

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shape-meet-interface  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.attach.conf.json  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: ai-avatar.md  coolify.md  desktop-release.md  model-package-delivery.md  realtime-ai-stack.md  shape-meet-final-user-guide.html  shape-meet-progress-dump-2026-07-04.html
infra/: docker-compose.coolify.yml  docker-compose.livekit.dev.yml  env.coolify.example  env.local.example
scripts/: bootstrap-model-workstation.mjs  build-ai-sidecar.mjs  check-ai-model-runtime.mjs  check-coolify-config.mjs  check-desktop-bundle.mjs  check-desktop-package-workflow.mjs  check-desktop-release.mjs  check-real-demo-readiness.mjs  check-remote-demo.mjs  check-sentry-config.mjs  configure-local-demo-env.mjs  configure-sentry-local.mjs  copy-processor-io.mjs  deploy-coolify-app.mjs  export-demo-debug-bundle.mjs  mock-ai-processor.mjs  package-demo-handoff.mjs  preflight-ai-runtime-models.mjs  prepare-ai-runtime-demo.mjs  prepare-ai-runtime-models.mjs  prepare-coolify-handoff.mjs  prepare-desktop-demo-handoff.mjs  prepare-desktop-runtime-config.mjs  prepare-local-demo.mjs  prepare-windows-demo-handoff.mjs  push-host-identity.mjs  render-coolify-env.mjs  report-demo-status.mjs  run-demo-ai-sidecar.mjs  run-livekit-dev.mjs  run-local-demo-stack.mjs  run-model-endpoint-server.mjs  (+44 more)
(+95 files in other folders)
